--- a/portfolio.html
+++ b/portfolio.html
@@ -62,123 +62,123 @@
       <section class="section">
         <h1 class="hidden">Виставка наших робіт</h1>
         <div class="container">
-          <ul class="list nav-projects">
-            <li><button class="button-portfolio" type="button">Усі</button></li>
-            <li><button class="button-portfolio" type="button">Веб-сайти</button></li>
-            <li><button class="button-portfolio" type="button">Додатки</button></li>
-            <li><button class="button-portfolio" type="button">Дизайн</button></li>
-            <li><button class="button-portfolio" type="button">Маркетинг</button></li>
+          <ul class="list navigation-portfolio">
+            <li><button class="navigation-portfolio__button" type="button">Усі</button></li>
+            <li><button class="navigation-portfolio__button" type="button">Веб-сайти</button></li>
+            <li><button class="navigation-portfolio__button" type="button">Додатки</button></li>
+            <li><button class="navigation-portfolio__button" type="button">Дизайн</button></li>
+            <li><button class="navigation-portfolio__button" type="button">Маркетинг</button></li>
           </ul>
         </div>
         <div class="container">
           <ul class="list project-list">
-            <li class="project-card">
-              <a href="http://" class="link-project">
-<div class="thumb-img-project">
-                <img src="./images/one.jpg" alt="Веб-сайт Технокряк" class="img-project" />
-<p class="description-hover">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            <li class="project-list__project-card">
+              <a href="http://" class="project-card__link-card">
+<div class="project-card__thumb-img">
+                <img src="./images/one.jpg" alt="Веб-сайт Технокряк" class="project-card__img" />
+<p class="project-card__hover-transform">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="card-text">
-                  <h2 class="project-heading">Технокряк</h2>
-                  <p class="project-descriotion">Веб-сайт</p>
+                <div class="project-card__container-text">
+                  <h2 class="project-card__title">Технокряк</h2>
+                  <p class="project-card__descriotion">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="project-card">
-              <a href="http://" class="link-project">
-<div class="thumb-img-project">
-                <img src="./images/two.jpg" alt="Дизайн про новий орлеан" class="img-project" />
-<p class="description-hover">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            <li class="project-list__project-card">
+              <a href="http://" class="project-card__link-card">
+<div class="project-card__thumb-img">
+                <img src="./images/two.jpg" alt="Дизайн про новий орлеан" class="project-card__img" />
+<p class="project-card__hover-transform">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="card-text">
-                  <h2 class="project-heading">
+                <div class="project-card__container-text">
+                  <h2 class="project-card__title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
                   </h2>
-                  <p class="project-descriotion">Дизайн</p>
+                  <p class="project-card__descriotion">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="project-card">
-              <a href="http://" class="link-project">
-<div class="thumb-img-project">
-                <img src="./images/three.jpg" alt="Додаток про їжу біля моря" class="img-project" />
-<p class="description-hover">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            <li class="project-list__project-card">
+              <a href="http://" class="project-card__link-card">
+<div class="project-card__thumb-img">
+                <img src="./images/three.jpg" alt="Додаток про їжу біля моря" class="project-card__img" />
+<p class="project-card__hover-transform">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="card-text">
-                  <h2 class="project-heading">Ресторан <span lang="en">Seafood</span></h2>
-                  <p class="project-descriotion">Додаток</p>
-                </div>
-              </a>
-            </li>
-            <li class="project-card">
-              <a href="http://" class="link-project">
-<div class="thumb-img-project">
-                <img src="./images/four.jpg" alt="Проєкт Проєкт " class="img-project" />
-<p class="description-hover">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                </div>
-                <div class="card-text">
-                  <h2 class="project-heading">Проєкт <span lang="en">Prime</span></h2>
-                  <p class="project-descriotion">Проєкт</p>
+                <div class="project-card__container-text">
+                  <h2 class="project-card__title">Ресторан <span lang="en">Seafood</span></h2>
+                  <p class="project-card__descriotion">Додаток</p>
                 </div>
               </a>
             </li>
-            <li class="project-card">
-              <a href="http://" class="link-project">
-<div class="thumb-img-project">
-                <img src="./images/five.jpg" alt="Проєкт коробки" class="img-project" />
-<p class="description-hover">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            <li class="project-list__project-card">
+              <a href="http://" class="project-card__link-card">
+<div class="project-card__thumb-img">
+                <img src="./images/four.jpg" alt="Проєкт Проєкт " class="project-card__img" />
+<p class="project-card__hover-transform">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="card-text">
-                  <h2 class="project-heading">Проєкт <span lang="en">Boxes</span></h2>
-                  <p class="project-descriotion">Додаток</p>
-                </div>
-              </a>
-            </li>
-            <li class="project-card">
-              <a href="http://" class="link-project">
-<div class="thumb-img-project">
-                <img src="./images/six.jpg" alt="Веб-сайт " class="img-project" />
-<p class="description-hover">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                </div>
-                <div class="card-text">
-                  <h2 class="project-heading">Inspiration <span lang="en">has no Borders</span></h2>
-                  <p class="project-descriotion">Веб-сайт</p>
+                <div class="project-card__container-text">
+                  <h2 class="project-card__title">Проєкт <span lang="en">Prime</span></h2>
+                  <p class="project-card__descriotion">Проєкт</p>
                 </div>
               </a>
             </li>
-            <li class="project-card">
-              <a href="http://" class="link-project">
-<div class="thumb-img-project">
-                <img src="./images/seven.jpg" alt="Дизайн видання Limited Edition" class="img-project" />
-<p class="description-hover">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            <li class="project-list__project-card">
+              <a href="http://" class="project-card__link-card">
+<div class="project-card__thumb-img">
+                <img src="./images/five.jpg" alt="Проєкт коробки" class="project-card__img" />
+<p class="project-card__hover-transform">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="card-text">
-                  <h2 class="project-heading">Видання <span lang="en">Limited Edition</span></h2>
-                  <p class="project-descriotion">Дизайн</p>
-                </div>
-              </a>
-            </li>
-            <li class="project-card">
-              <a href="http://" class="link-project">
-<div class="thumb-img-project">
-                <img src="./images/eight.jpg" alt="Проєкт Маркетинг" class="img-project" />
-<p class="description-hover">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                </div>
-                <div class="card-text">
-                  <h2 class="project-heading">Проєкт <span lang="en">LAB</span></h2>
-                  <p class="project-descriotion">Маркетинг</p>
+                <div class="project-card__container-text">
+                  <h2 class="project-card__title">Проєкт <span lang="en">Boxes</span></h2>
+                  <p class="project-card__descriotion">Додаток</p>
                 </div>
               </a>
             </li>
-            <li class="project-card">
-              <a href="http://" class="link-project">
-                <div class="thumb-img-project">
-                <img src="./images/nine.jpg" alt="Додаток про справы" class="img-project" />
-<p class="description-hover">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            <li class="project-list__project-card">
+              <a href="http://" class="project-card__link-card">
+<div class="project-card__thumb-img">
+                <img src="./images/six.jpg" alt="Веб-сайт " class="project-card__img" />
+<p class="project-card__hover-transform">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="card-text">
-                  <h2 class="project-heading" lang="en">Growing Business</h2>
-                  <p class="project-descriotion">Додаток</p>
+                <div class="project-card__container-text">
+                  <h2 class="project-card__title">Inspiration <span lang="en">has no Borders</span></h2>
+                  <p class="project-card__descriotion">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-list__project-card">
+              <a href="http://" class="project-card__link-card">
+<div class="project-card__thumb-img">
+                <img src="./images/seven.jpg" alt="Дизайн видання Limited Edition" class="project-card__img" />
+<p class="project-card__hover-transform">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
+                <div class="project-card__container-text">
+                  <h2 class="project-card__title">Видання <span lang="en">Limited Edition</span></h2>
+                  <p class="project-card__descriotion">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-list__project-card">
+              <a href="http://" class="project-card__link-card">
+<div class="project-card__thumb-img">
+                <img src="./images/eight.jpg" alt="Проєкт Маркетинг" class="project-card__img" />
+<p class="project-card__hover-transform">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
+                <div class="project-card__container-text">
+                  <h2 class="project-card__title">Проєкт <span lang="en">LAB</span></h2>
+                  <p class="project-card__descriotion">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-list__project-card">
+              <a href="http://" class="project-card__link-card">
+                <div class="project-card__thumb-img">
+                <img src="./images/nine.jpg" alt="Додаток про справы" class="project-card__img" />
+<p class="project-card__hover-transform">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
+                <div class="project-card__container-text">
+                  <h2 class="project-card__title" lang="en">Growing Business</h2>
+                  <p class="project-card__descriotion">Додаток</p>
                 </div>
               </a>
             </li>
